# cfd-smart-entry-system

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: __init__.py  default.yaml  settings.yaml
docs/: HANDOVER.md  README.md  SLACK_BOT_SETUP.md
monitoring/: prometheus.yml
src/: __init__.py  ai_signal_generator.py  backtester.py  config.py  main.py  market_analyzer.py  mt5_connector.py  multi_tier_ai.py  order_executor.py  slack_integration.py  slippage_reducer.py  smart_entry_controller.py  trade_log_schema.py  trade_scorer.py  voice_command_parser.py  voice_input.py
src/cfd_smart_entry/: __init__.py
src/cfd_smart_entry/ai/: __init__.py
src/cfd_smart_entry/core/: __init__.py
src/cfd_smart_entry/mt5/: __init__.py
src/cfd_smart_entry/utils/: __init__.py
src/cfd_smart_entry/voice/: __init__.py
tests/: __init__.py  test_ai_signal_generator.py  test_config.py  test_market_analyzer.py  test_slippage_reducer.py  test_voice_input.py
tests/integration/: __init__.py
tests/unit/: __init__.py
